[package]
name = "semdesk-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix = "0.13.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = { version = "0.10.1", features = ["auto-color"]}
semdesk-vector = { path = "../semdesk-vector" }
log = "0.4.20"
usearch = "2.8.14"
rand = "0.8.5"
