[package]
name = "semtex-vector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle-core = {version = "0.3.2"}
candle-nn = {version = "0.3.2"}
candle-transformers = {version = "0.3.2"}
hf-hub = "0.3.2"
rust-bert = { version = "0.22.0" }
serde_json = "1.0.111"
tokenizers = "0.15.0"
